--- a/index.html
+++ b/index.html
@@ -1,19 +1,107 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Веб-ресурсы для маркетинга</title>
-</head>
-<body>
-    <header>
-        Шапка сайта
-    </header>
-    <main>
-        <b>Основная информация</b>
-    </main>
-    <Footer>
-        Подвал
-    </Footer>
-</body>
-</html>
+import React, { useState } from 'react';
+
+const Home: React.FC = () => {
+  const [email, setEmail] = useState<string>('');
+  const [subscribed, setSubscribed] = useState<boolean>(false);
+
+  const handleSubscribe = (e: React.FormEvent<HTMLFormElement>) => {
+    e.preventDefault();
+    if (email) {
+      setSubscribed(true);
+    }
+  };
+
+  return (
+    <div className="min-h-screen flex flex-col bg-white text-gray-900">
+      {/* Navigation Bar */}
+      <header className="bg-blue-600 text-white py-4">
+        <div className="container mx-auto px-4 flex justify-between items-center">
+          <h1 className="text-2xl font-bold">CloudSolutions</h1>
+          <nav>
+            <ul className="flex space-x-6">
+              <li><a href="#home" className="hover:text-blue-300">Главная</a></li>
+              <li><a href="#features" className="hover:text-blue-300">Возможности</a></li>
+              <li><a href="#pricing" className="hover:text-blue-300">Цены</a></li>
+              <li><a href="#contact" className="hover:text-blue-300">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+
+      {/* Hero Section */}
+      <main className="flex-grow">
+        <section id="home" className="bg-blue-50 py-16">
+          <div className="container mx-auto px-4 text-center">
+            <h2 className="text-4xl font-extrabold text-blue-700 mb-4">Облачные Технологии</h2>
+            <p className="text-lg text-gray-600 mb-8">
+              Решения для управления IT-инфраструктурой и обработки данных в облаке.
+            </p>
+            <button className="bg-blue-600 text-white px-8 py-3 rounded-md hover:bg-blue-700 transition-colors">
+              Узнать подробнее
+            </button>
+          </div>
+        </section>
+
+        {/* Features Section */}
+        <section id="features" className="py-16 bg-white">
+          <div className="container mx-auto px-4">
+            <h3 className="text-3xl font-bold text-center text-blue-700 mb-12">Наши Услуги</h3>
+            <div className="grid grid-cols-1 md:grid-cols-3 gap-8">
+              <div className="bg-blue-50 p-6 rounded-lg shadow-md text-center">
+                <div className="mx-auto mb-4 w-16 h-16 bg-gray-200 border-2 border-dashed rounded-xl"></div>
+                <h4 className="text-xl font-semibold mb-2">Облачное Хранилище</h4>
+                <p className="text-gray-600">Надежное хранение данных с высокой доступностью.</p>
+              </div>
+              <div className="bg-blue-50 p-6 rounded-lg shadow-md text-center">
+                <div className="mx-auto mb-4 w-16 h-16 bg-gray-200 border-2 border-dashed rounded-xl"></div>
+                <h4 className="text-xl font-semibold mb-2">Облачные Вычисления</h4>
+                <p className="text-gray-600">Масштабируемые вычислительные мощности для ваших задач.</p>
+              </div>
+              <div className="bg-blue-50 p-6 rounded-lg shadow-md text-center">
+                <div className="mx-auto mb-4 w-16 h-16 bg-gray-200 border-2 border-dashed rounded-xl"></div>
+                <h4 className="text-xl font-semibold mb-2">Безопасность в Облаке</h4>
+                <p className="text-gray-600">Обеспечение максимальной защиты ваших данных.</p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        {/* Subscription Section */}
+        <section id="pricing" className="py-16 bg-blue-50">
+          <div className="container mx-auto px-4 text-center">
+            <h3 className="text-2xl font-bold text-blue-700 mb-4">Подпишитесь на новости</h3>
+            {subscribed ? (
+              <p className="text-green-600 font-semibold">Спасибо за подписку!</p>
+            ) : (
+              <form onSubmit={handleSubscribe} className="flex flex-col items-center space-y-4">
+                <input
+                  type="email"
+                  placeholder="Введите ваш email"
+                  value={email}
+                  onChange={(e) => setEmail(e.target.value)}
+                  className="w-full max-w-sm px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400"
+                  required
+                />
+                <button
+                  type="submit"
+                  className="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition-colors"
+                >
+                  Подписаться
+                </button>
+              </form>
+            )}
+          </div>
+        </section>
+      </main>
+
+      {/* Footer */}
+      <footer id="contact" className="bg-blue-600 py-4">
+        <div className="container mx-auto px-4 text-center text-white">
+          &copy; {new Date().getFullYear()} CloudSolutions. Все права защищены.
+        </div>
+      </footer>
+    </div>
+  );
+};
+
+export default Home;
