--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ const Home: React.FC = () => {
       {/* Footer / Contacts */}
       <footer id="contact" className="bg-blue-600 py-6">
         <div className="container mx-auto px-4 text-center text-white">
-          <p className="mb-2">Свяжитесь с нами: info@cloudsolutions.com</p>
+          <p className="mb-2">Свяжитесь с нами: Cloud.com</p>
           <p>© {new Date().getFullYear()} CloudSolutions. Все права защищены.</p>
         </div>
       </footer>
